feat: admin edit schools
