# apps/backend/app/modules/admin/update-school-styles/validator.ts
@@ -1,0 +1,13 @@
+import vine from "@vinejs/vine";
+import { type Infer } from "@vinejs/vine/types";
+
+export const schema = vine.create(
+  vine.object({
+    params: vine.object({
+      username: vine.string(),
+    }),
+    styles: vine.array(vine.string()).minLength(1).maxLength(3),
+  })
+);
+
+export type Validator = Infer<typeof schema>;
